# heiDGAF

./: .dockerignore  .gitignore  .pep8  .pre-commit-config.yaml  .readthedocs.yml  DGA_dgta_EDA.ipynb  DGA_heicloud_EDA.ipynb  Dockerfile  README.md  config.yaml  dns_extraction.py  dns_featuring.py  docker-compose.yml  generate-env.sh  install_requirements.sh  kafka_config.yaml  new_config.yaml  pyproject.toml  requirements-dev.txt  requirements.insp.txt  requirements.inspector.txt  requirements.prefilter.txt  requirements.txt  setup.cfg  test.py  tests.py  train_models.sh
assets/: upload_seafile.py
benchmarking/: Dockerfile  Dockerfile.benchmark_test_runner  benchmark_config.yaml  benchmark_test_config.yaml  dev_generate_exact_plot.py  docker-compose.benchmark_test_runner.yml  docker-compose.run_test.yml  docker-compose.yml  extract_data.sh  input_data_handlers.py  input_reader.py  pdf_overview_generator.py  plot_generator.py  plot_generators.py
docker/: .env  clickhouse-config.xml  create_datatest_tables.sh  datatests.json  default.txt  dev-get-csv-data.py  dev-query.py  docker-compose.datatests.yml  docker-compose.dev-mock-logs.yml  docker-compose.dev-query.yml  docker-compose.dev-real-logs.yml  docker-compose.external.yml  docker-compose.grafana-datatests.yml  docker-compose.grafana.yml  docker-compose.kafka.yml  docker-compose.monitoring.yml  docker-compose.pipeline.yml  docker-compose.query.yml  docker-compose.send-mock-logs.yml  docker-compose.send-real-logs.yml  docker-compose.swarm-test.yml  docker-compose.swarm.yml  docker-compose.yml  init_datatests.sh  mock_logs.dev.py  query.dev.py  real_logs.dev.py
docker_files/: Dockerfile.dtc  Dockerfile.insp  Dockerfile.lc  Dockerfile.ls  Dockerfile.pf  docker-compose.yml
dockerfiles/: Dockerfile.detector  Dockerfile.inspector  Dockerfile.logcollector  Dockerfile.logserver  Dockerfile.prefilter
docs/: conf.py  configuration.rst  developer_guide.rst  index.rst  monitoring.rst  pipeline.rst  references.rst  refs.bib  requirements.txt  training.rst  usage.rst
example/: DGA_cic_EDA.ipynb  DGA_dgad_baseline.ipynb  DGA_dgta_EDA.ipynb  dgta_decode.py  dgta_profiling.py  dns_profiling.py
heidgaf/: __init__.py  cache.py  cli.py  feature.py  main.py  metrics.py  parser.py  schema.py  train.py
heidgaf_core/: batch_handler.py  config.py  create_topics.py  kafka_handler.py  (+3 more)
(+359 files in other folders)
